# aion_algo_trading

./: .gitignore  MIGRATION_REPORT.md  README.md
src/shared_core/: README.md  __init__.py  calculation_service.py  edge_calculation_wrapper.py  fix_redis_markers.sh  index_manager.py  market_calendar.py  multiprocess_pipeline.py  pyproject.toml  redis_migration_standardizer.py  remove_legacy.py  symbol_resolver.py  targeted_audit.py  todo.md  write_first_cache.py
src/shared_core/alerts/: __init__.py  alert_stream.py
src/shared_core/config/: sector_volatility.json  worker_config.py
src/shared_core/config_utils/: __init__.py  config_loader.py  thresholds.py  timestamp_normalizer.py  yaml_field_loader.py
src/shared_core/core/: __init__.py
src/shared_core/dynamic_thresholds/: __init__.py  market_profile_fallback.py
src/shared_core/historical_data/: README.md
src/shared_core/instrument_token/: CLICKHOUSE_INTEGRATION.md  INTEGRATION_GUIDE.md  REGISTRY_MIGRATION_GUIDE.md  REGISTRY_SYSTEM_OVERVIEW.md  TOKEN_LOOKUP_CENTRALIZED.md  __init__.py  angel_one_lookup.py  benchmark.py  clickhouse_instrument_manager.py  comprehensive_registry.json  create_focus_instruments.py  focus_instruments.json  generate_equity_static_lists.py  generate_token_lookup_from_csv.py  instrument_registry.py  intraday_focus_registry.json  merge_enriched_to_canonical.py  migration_status.py  optimized_loaders.py  redis_instrument_cache.py  registry_config.py  registry_factory.py  registry_helper.py  registry_sync_monitor.py  registry_types.py  sync_service.py  zerodha_lookup.py
(+271 files in other folders)
