[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-core"
version = "0.1.0"
description = "Shared libraries for AION trading platform (Redis clients, volume utilities, config helpers)."
authors = [
  { name = "AION Trading" }
]
dependencies = []
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["shared_core"]

[tool.setuptools.package-dir]
shared_core = "."
